main/freeradius: simplify split functions using amove command

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -158,17 +158,12 @@ eap() {
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-eap=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir "$subpkgdir"/usr/bin
-	mv "$pkgdir"$_radlibdir/rlm_eap*.so "$subpkgdir"$_radlibdir/
-	mv "$pkgdir"/usr/bin/radeapclient "$subpkgdir"/usr/bin/
+	amove $_radlibdir/rlm_eap*.so
+	amove usr/bin/radeapclient
 
-	mkdir -p "$subpkgdir"$_radmodsdir "$subpkgdir"$_radconfdir/mods-enabled
-	mv "$pkgdir"$_radmodsdir/eap "$subpkgdir"$_radmodsdir/
-	mv "$pkgdir"$_radconfdir/mods-enabled/eap \
-		"$subpkgdir"$_radconfdir/mods-enabled/
-
-	mkdir -p "$subpkgdir"$_radconfdir
-	mv "$pkgdir"$_radconfdir/certs "$subpkgdir"$_radconfdir/
+	amove $_radmodsdir/eap
+	amove $_radconfdir/certs
+	amove $_radconfdir/mods-enabled/eap
 }
 
 ldap() {
@@ -176,8 +171,7 @@ ldap() {
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-ldap=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_ldap* "$subpkgdir"$_radlibdir/
+	amove $_radlibdir/rlm_ldap*
 }
 
 krb5() {
@@ -185,20 +179,15 @@ krb5() {
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-krb5=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_krb5* "$subpkgdir"$_radlibdir/
+	amove $_radlibdir/rlm_krb5*
 }
 
 lib() {
 	pkgdesc="Freeradius shared libraries"
 	depends=""
 
-	mkdir -p "$subpkgdir"$_radlibdir \
-		"$subpkgdir"$_radconfdir \
-		"$subpkgdir"/usr/share/freeradius
-
-	mv "$pkgdir"$_radlibdir/libfreeradius-*.so "$subpkgdir"$_radlibdir/
-	mv "$pkgdir"/usr/share/freeradius/* "$subpkgdir"/usr/share/freeradius/
+	amove $_radlibdir/libfreeradius-*.so
+	amove usr/share/freeradius/*
 }
 
 sql() {
@@ -206,17 +195,12 @@ sql() {
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-sql=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
 	local lib; for lib in sql sqlippool sql_null sqlcounter; do
-		mv "$pkgdir"$_radlibdir/rlm_$lib.so "$subpkgdir"$_radlibdir/
+		amove $_radlibdir/rlm_$lib.so
 	done
 
-	mkdir -p "$subpkgdir"$_radconfdir/sites-available
-	mv "$pkgdir"$_radconfdir/sites-available/buffered-sql \
-		"$subpkgdir"$_radconfdir/sites-available/
-
-	mkdir -p "$subpkgdir"$_radmodsdir
-	mv "$pkgdir"$_radmodsdir/*sql* "$subpkgdir"$_radmodsdir/
+	amove $_radconfdir/sites-available/buffered-sql
+	amove $_radmodsdir/*sql*
 }
 
 mysql() {
@@ -232,9 +216,7 @@ mssql() {
 	depends="freeradius-sql=$pkgver-r$pkgrel"
 	provides="freeradius3-mssql=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radmodsconfdir/sql/main
-	mv "$pkgdir"$_radmodsconfdir/sql/main/mssql \
-		"$subpkgdir"$_radmodsconfdir/sql/main/
+	amove $_radmodsconfdir/sql/main/mssql
 }
 
 perl() {
@@ -242,20 +224,15 @@ perl() {
 	depends="freeradius=$pkgver-r$pkgrel perl"
 	provides="freeradius3-perl=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_perl* "$subpkgdir"$_radlibdir/
-
-	mkdir -p "$subpkgdir"$_radconfdir/mods-available
-	mv "$pkgdir"$_radconfdir/mods-available/perl \
-		"$subpkgdir"$_radconfdir/mods-available/perl
+	amove $_radlibdir/rlm_perl*
+	amove $_radconfdir/mods-available/perl
 }
 
 checkrad() {
 	pkgdesc="Check if a user is (still) logged in on a certain port"
 	depends="perl perl-net-telnet perl-snmp-session net-snmp-tools"
 
-	mkdir -p "$subpkgdir"/usr/sbin
-	mv "$pkgdir"/usr/sbin/checkrad "$subpkgdir"/usr/sbin/checkrad
+	amove usr/sbin/checkrad
 }
 
 postgresql() {
@@ -271,13 +248,9 @@ python() {
 	provides="freeradius3-python=$pkgver-r$pkgrel"
 	pkgdesc="Python module for FreeRADIUS server"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_python* "$subpkgdir"$_radlibdir/
-
-	local dir; for dir in $_radmodsdir $_radmodsconfdir; do
-		mkdir -p "$subpkgdir"$dir
-		mv "$pkgdir"$dir/python3 "$subpkgdir"$dir/
-	done
+	amove $_radlibdir/rlm_python*
+	amove $_radmodsdir/python3
+	amove $_radmodsconfdir/python3
 }
 
 radclient() {
@@ -285,8 +258,7 @@ radclient() {
 	depends=""
 	provides="freeradius3-radclient=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"/usr/bin
-	mv "$pkgdir"/usr/bin/radclient "$subpkgdir"/usr/bin/radclient
+	amove usr/bin/radclient
 }
 
 sqlite() {
@@ -302,8 +274,7 @@ unixodbc() {
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-unixodbc=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_sql_unixodbc.so "$subpkgdir"$_radlibdir/
+	amove $_radlibdir/rlm_sql_unixodbc.so
 }
 
 pam() {
@@ -311,34 +282,28 @@ pam() {
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-pam=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_pam* "$subpkgdir"$_radlibdir/
+	amove $_radlibdir/rlm_pam*
 }
 
 rest() {
 	pkgdesc="REST module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_rest* "$subpkgdir"$_radlibdir/
+	amove $_radlibdir/rlm_rest*
 }
 
 redis() {
 	pkgdesc="Redis modules for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_redis* "$subpkgdir"$_radlibdir/
+	amove $_radlibdir/rlm_redis*
 }
 
 _mvdb() {
 	local dir; for dir in ippool-dhcp ippool counter main cui; do
-		mkdir -p "$subpkgdir"$_radmodsconfdir/sql/$dir
-		mv "$pkgdir"$_radmodsconfdir/sql/$dir/$1 \
-			"$subpkgdir"$_radmodsconfdir/sql/$dir
+		amove $_radmodsconfdir/sql/$dir/$1
 	done
-	mkdir -p "$subpkgdir"$_radlibdir
-	mv "$pkgdir"$_radlibdir/rlm_sql_$1.so "$subpkgdir"$_radlibdir/
+	amove $_radlibdir/rlm_sql_$1.so
 }
 
 sha512sums="513ed0a5d9e6b9a8d89a9b02c86ff528a9ff14d928f4c1040ca44702465abd711588fe6afa35554cb2c8e8bd7f19dd5be3dbc78445c62c7b00bf5cbc4c621312  freeradius-server-3.0.20.tar.gz
