main/freeradius: rename subpkg python to python3
Package freeradius-python originally provided module rlm_python
(Python 2). This was changed in f85c84c720fce503f953ea8f57da1f71d39cae30
by @kaniini to provide rlm_python3 (Python 3) instead.

This breakes backward compatibility with previous versions of the
package in a way that is not transparent to the user! They will upgrade
the packages and suddenly end-up with rlm_python3 module instead of
rlm_python without noticing. Moreover, the configuration for rlm_python
was left in the package (until I removed it in 21ca670)!

These are two different modules with a different configuration.
rlm_python uses name "python", rlm_python3 uses name "python3" (config
name, module name used in the config, library name...). They are not
interchangeable and naming package with rlm_python3 as
freeradius-python is very confusing. We don't name Python 3 package as
"python" either...

Fortunately, this change has not got into any stable branch yet.

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -50,7 +50,7 @@ subpackages="
 	$pkgname-sql
 	$pkgname-perl
 	$pkgname-postgresql
-	$pkgname-python
+	$pkgname-python3
 	$pkgname-radclient
 	$pkgname-sqlite
 	$pkgname-unixodbc
@@ -270,10 +270,9 @@ postgresql() {
 	_mvdb postgresql
 }
 
-python() {
+python3() {
 	depends="freeradius=$pkgver-r$pkgrel"
-	provides="freeradius3-python=$pkgver-r$pkgrel"
-	pkgdesc="Python module for FreeRADIUS server"
+	pkgdesc="Python 3 module for FreeRADIUS server"
 
 	amove $_radlibdir/rlm_python*
 	amove $_radmodsdir/python3
