main/postgresql: build with JIT

--- a/main/postgresql/APKBUILD
+++ b/main/postgresql/APKBUILD
@@ -15,12 +15,12 @@ pkggroups="postgres"
 checkdepends="diffutils"
 depends_dev="openssl-dev"
 makedepends="$depends_dev libedit-dev zlib-dev libxml2-dev util-linux-dev
-	openldap-dev tcl-dev perl-dev python3-dev linux-headers"
+	openldap-dev tcl-dev perl-dev python3-dev linux-headers llvm-dev clang"
 subpackages="$pkgname-contrib $pkgname-dev $pkgname-doc libpq $pkgname-libs
 	$pkgname-client $pkgname-pltcl
 	$pkgname-plperl $pkgname-plperl-contrib:plperl_contrib
 	$pkgname-plpython3 $pkgname-plpython3-contrib:plpython3_contrib"
-source="https://ftp.postgresql.org/pub/source/v$pkgver/$pkgname-$pkgver.tar.bz2
+source="https://ftp.postgresql.org/pub/source/v$pkgver/postgresql-$pkgver.tar.bz2
 	initdb.patch
 	perl-rpath.patch
 	conf-unix_socket_directories.patch
@@ -31,7 +31,6 @@ source="https://ftp.postgresql.org/pub/source/v$pkgver/$pkgname-$pkgver.tar.bz2
 	pg-restore.confd
 	pltcl_create_tables.sql
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 options="!checkroot"
 
 # secfixes:
@@ -69,7 +68,6 @@ options="!checkroot"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 
 	local file; for file in $pkgname.initd $pkgname.confd; do
 		sed "s|@VERSION@|${pkgver%.*}|" "$srcdir"/$file > $file
@@ -77,8 +75,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
 	export PYTHON=/usr/bin/python3
 	export CFLAGS="${CFLAGS/-Os/-O2}"
 	export CPPFLAGS="${CPPFLAGS/-Os/-O2}"
@@ -95,6 +91,7 @@ build() {
 		--with-openssl \
 		--with-uuid=e2fs \
 		--disable-rpath \
+		--with-llvm \
 		--with-perl \
 		--with-python \
 		--with-tcl
@@ -102,16 +99,12 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	_run_tests src/test
 	_run_tests src/pl
 	_run_tests contrib
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install install-docs
 
 	cd "$pkgdir"
