main/libvirt: install module file to /lib/modules-load.d

--- a/main/libvirt/APKBUILD
+++ b/main/libvirt/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=libvirt
 pkgver=6.0.0
 _ver="${pkgver/_rc/-rc}"
-pkgrel=0
+pkgrel=1
 pkgdesc="A virtualization API for several hypervisor and container systems"
 url="https://libvirt.org/"
 arch="all"
@@ -88,8 +88,8 @@ package() {
 	install -D -m755 $srcdir/virtlogd.initd $pkgdir/etc/init.d/virtlogd
 	install -D -m755 $srcdir/virtlockd.initd $pkgdir/etc/init.d/virtlockd
 
-	install -d "$pkgdir"/etc/modules-load.d
-	echo "tun" > "$pkgdir"/etc/modules-load.d/libvirt.conf
+	install -d "$pkgdir"/lib/modules-load.d
+	echo "tun" > "$pkgdir"/lib/modules-load.d/libvirt.conf
 
 	rm -rf "$pkgdir"/usr/lib/charset.alias
 	rmdir -p "$pkgdir"/usr/lib 2>/dev/null || true
@@ -112,7 +112,7 @@ daemon() {
 	 "$subpkgdir"/usr/sbin
 	mv "$pkgdir"/etc/init.d "$subpkgdir"/etc
 	mv "$pkgdir"/etc/conf.d "$subpkgdir"/etc
-	mv "$pkgdir"/etc/modules-load.d "$subpkgdir"/etc
+	mv "$pkgdir"/lib/modules-load.d "$subpkgdir"/lib
 	mv "$pkgdir"/etc/$pkgname/libvirtd.conf "$subpkgdir"/etc/libvirt/
 	mv "$pkgdir"/usr/sbin/libvirtd "$subpkgdir"/usr/sbin/
 	mv "$pkgdir"/etc/logrotate.d/libvirtd "$subpkgdir"/etc/logrotate.d/
