--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -41,6 +41,7 @@ install="$pkgname.pre-install"
 subpackages="
 	$pkgname-dbg
 	$pkgname-doc
+	$pkgname-static
 	$pkgname-dev
 	$pkgname-eap
 	$pkgname-ldap
