main/freeradius: move utilities to subpkg -utils
These are not needed for running radiusd. Fedora and Debian provides
them in freeradius-utils package as well.

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -37,7 +37,7 @@ makedepends="
 	"
 pkggroups="radius"
 pkgusers="radius"
-install="$pkgname.pre-install"
+install="$pkgname.pre-install $pkgname.post-upgrade"
 subpackages="
 	$pkgname-dbg
 	$pkgname-doc
@@ -60,6 +60,7 @@ subpackages="
 	$pkgname-rest
 	$pkgname-redis
 	$pkgname-checkrad
+	$pkgname-utils
 	"
 provides="freeradius3=$pkgver-r$pkgrel"
 source="ftp://ftp.freeradius.org/pub/freeradius/$pkgname-server-$pkgver.tar.gz
@@ -327,6 +328,13 @@ redis() {
 
 	amove $_radlibdir/rlm_redis*
 	amove $_radmodsdir/redis*
+}
+
+utils() {
+	pkgdesc="FreeRADIUS utilities"
+	depends="freeradius=$pkgver-r$pkgrel"
+
+	amove usr/bin/*
 }
 
 _mvdb() {
