main/freeradius: move dhcp module into subpkg -dhcp
Same as in Debian.

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -45,6 +45,7 @@ subpackages="
 	$pkgname-dev
 	$pkgname-eap
 	$pkgname-ldap
+	$pkgname-dhcp
 	$pkgname-lib
 	$pkgname-mssql
 	$pkgname-mysql
@@ -208,6 +209,15 @@ krb5() {
 
 	amove $_radlibdir/rlm_krb5*
 	amove $_radmodsdir/krb5
+}
+
+dhcp() {
+	pkgdesc="DHCP module for FreeRADIUS server"
+	depends="freeradius=$pkgver-r$pkgrel"
+
+	amove $_radlibdir/*_dhcp.so $_radlibdir/libfreeradius-dhcp.so
+	amove $_radmodsdir/dhcp
+	amove $_radconfdir/sites-available/dhcp
 }
 
 lib() {
