--- a/community/lxcfs/APKBUILD
+++ b/community/lxcfs/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="FUSE filesystem for LXC"
 url="https://linuxcontainers.org/lxcfs"
 arch="all"
 license="Apache-2.0"
-depends="cgmanager shadow-uidmap uidmapshift"
+depends="shadow-uidmap uidmapshift"
 makedepends="fuse-dev linux-headers help2man"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://linuxcontainers.org/downloads/lxcfs/lxcfs-$pkgver.tar.gz
