--- a/community/libreswan/APKBUILD
+++ b/community/libreswan/APKBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 
 pkgname=libreswan
-pkgver=3.29
-pkgrel=1
+pkgver=3.30
+pkgrel=0
 pkgdesc="IPsec implementation for Linux"
 url="https://libreswan.org"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="nss-tools iproute2"
 provides="openswan"
 makedepends="bison flex coreutils bash xmlto
@@ -45,6 +45,6 @@ package() {
 		FINALLIBEXECDIR=/usr/libexec/ipsec \
 		install
 }
-sha512sums="4b4d91204d8b1724e0a9ad3ed55fc232c9a526211c3b47b6cc33fd160feb72538ef1661becca250bde815b9d7b75709bf16c7b372476605557b47c785cdf2535  libreswan-3.29.tar.gz
+sha512sums="1ea3505938231bacb762ec13c278b584239660e20994030423f0200ff32fcc0f0a0c74649b1470bbfc1165a762d3b60d0b1c5c56bff81a52415c7666736b5b99  libreswan-3.30.tar.gz
 df503e349661a029f8f6569ea65b4ecceb67f18c0a133d4818d390c0e6e719c2c793c483881778685f1eedaa210ea815ae4f77a94fa84a1acb63a9ad5e8db501  fix-includes.patch
 36415fae9b6674d66b7728fbc1df4bb3c4fcb16f0bbe88ead1f23e553bb51a9deb288a8659a0050a3fb1e14c3dbb8fb8524e9ef48fb6842dc94b11b758349c58  Makefile.inc.local"
