main/freeradius: remove sites-available/*.orig
This is a residue from applying patches.

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -5,7 +5,7 @@
 pkgname=freeradius
 _realname=freeradius
 pkgver=3.0.20
-pkgrel=2
+pkgrel=3
 pkgdesc="RADIUS (Remote Authentication Dial-In User Service) server"
 url="https://freeradius.org/"
 arch="all"
@@ -51,8 +51,9 @@ ldpath="$_radlibdir"
 prepare() {
 	default_prepare
 	update_config_sub
-	# remove certs generation
-	# rm -rf raddb/certs
+
+	# Remove residue from applying patches.
+	rm -f raddb/sites-available/*.orig
 }
 
 build() {
