--- a/testing/keybase-client/APKBUILD
+++ b/testing/keybase-client/APKBUILD
@@ -2,16 +2,16 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=keybase-client
-pkgver=4.2.1
-pkgrel=1
+pkgver=5.2.0
+pkgrel=0
 pkgdesc="CLI client for keybase.io"
 url="https://github.com/keybase/client"
 arch="all"
 license="BSD-3-Clause"
 makedepends="go"
 options="!check" # need access to localhost:3000, which doesn't work with our infra
-source="$pkgname-$pkgver.tar.gz::https://github.com/keybase/client/archive/v${pkgver}.tar.gz"
-builddir="$srcdir/client-${pkgver}"
+source="$pkgname-$pkgver.tar.gz::https://github.com/keybase/client/archive/v$pkgver.tar.gz"
+builddir="$srcdir/client-$pkgver"
 
 build() {
 	cd "$srcdir"
@@ -19,13 +19,13 @@ build() {
 	export GO15VENDOREXPERIMENT=1
 
 	mkdir -p src/github.com/keybase
-	cp -r "$srcdir/client-${pkgver}" src/github.com/keybase/client
+	cp -r "$srcdir/client-$pkgver" src/github.com/keybase/client
 	cd src/github.com/keybase/client/go/keybase
 	go build -v -a -tags production -o "$srcdir/keybase"
 }
 
 package() {
-	install -Dm755 "${srcdir}/keybase" "${pkgdir}/usr/bin/keybase"
+	install -Dm755 "$srcdir/keybase" "$pkgdir/usr/bin/keybase"
 }
 
-sha512sums="cebed3975a85ad42bf7058625eaae5eb4c544d712d89c75f8d6d0d3b4bffae42e1bd449a778a993d4b21e2de39255c6d0aad50f437ee027f57faf8bfaa3cee70  keybase-client-4.2.1.tar.gz"
+sha512sums="a7cb5c6d6a9d595c93f4ba50e58e8b673baa9aef4d4c1b2f1f70e6ce25f7b0c4ddf9df0c60a8b444484f63df109222c29a0058befa3e1f27bc10e802fecc1d33  keybase-client-5.2.0.tar.gz"
