community/grilo: upgrade to 0.3.12 and adopt

--- a/community/grilo/APKBUILD
+++ b/community/grilo/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=grilo
-pkgver=0.3.11
+pkgver=0.3.12
 pkgrel=0
 pkgdesc="GNOME media discovery framework"
 url="https://wiki.gnome.org/Projects/Grilo"
@@ -11,13 +11,12 @@ makedepends="gnome-desktop-dev liboauth-dev gmime-dev libsoup-dev libxml2-dev
 	totem-pl-parser-dev gobject-introspection-dev itstool libxslt libxml2-utils
 	docbook-xml docbook-xsl meson vala gtk-doc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-libs"
-# source="https://download.gnome.org/sources/grilo/0.3/grilo-$pkgver.tar.xz"
-source="https://gitlab.gnome.org/GNOME/grilo/-/archive/grilo-$pkgver/grilo-grilo-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgname-$pkgver"
+source="https://download.gnome.org/sources/grilo/${pkgver%.*}/grilo-$pkgver.tar.xz"
 
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=debugoptimized \
 		-Denable-introspection=true \
 		-Denable-vala=true \
 		build
@@ -32,4 +31,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="0740921cd2adb4e95edbb7d54cde216be143d582f3511b5e1c902ec1dd34b5a38217677b78712ca21fd7e005985abffcf407d7a48dd6d0d1f359678081b2ef75  grilo-grilo-0.3.11.tar.gz"
+sha512sums="c0badc4b3f96efa04e6f3b5f32b2322855d9a660f748ce68012d266a6f5936f850bd63e559c782ae02ee24ba282c3b3882c6b8fae99019b913d74ff927a31017  grilo-0.3.12.tar.xz"
