--- a/testing/in-sync/APKBUILD
+++ b/testing/in-sync/APKBUILD
@@ -4,17 +4,13 @@ pkgname=in-sync
 pkgver=0.1.0
 pkgrel=0
 pkgdesc="inotify-triggered file synchronization"
-url=https://git.alpinelinux.org/cgit/aports/tree/testing/in-sync
-arch=noarch
-license=GPL2
+url="https://git.alpinelinux.org/cgit/aports/tree/testing/in-sync"
+arch="noarch"
+license="GPL-2.0-only"
 depends="inotify-tools rsync"
-subpackages=$pkgname-openrc
+subpackages="$pkgname-openrc"
 source="in-sync in-sync.conf in-sync.initd"
-options="!check"
-
-build() {
-	:
-}
+options="!check" # No testsuite
 
 package() {
 	install -D -m 755 "$srcdir/in-sync" "$pkgdir/usr/sbin/in-sync"
