community/grilo-plugins: upgrade to 0.3.11

--- a/community/grilo-plugins/APKBUILD
+++ b/community/grilo-plugins/APKBUILD
@@ -1,26 +1,25 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=grilo-plugins
-pkgver=0.3.10
-pkgrel=2
+pkgver=0.3.11
+pkgrel=0
 pkgdesc="GNOME media discovery framework plugins"
-options="!check"
 url="https://wiki.gnome.org/Projects/Grilo"
 arch="all"
 license="LGPL-2.1-or-later"
 makedepends="glib-dev grilo-dev avahi-dev meson gstreamer-dev json-glib-dev
 	libsoup-dev libxml2-dev sqlite-dev tracker-dev totem-pl-parser-dev
-	lua5.3-dev gperf gnome-online-accounts-dev itstool gom-dev libmediaart-dev
+	gperf gnome-online-accounts-dev itstool gom-dev libmediaart-dev
 	libgdata-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-dbg"
-source="https://download.gnome.org/sources/grilo-plugins/${pkgver%.*}/grilo-plugins-$pkgver.tar.xz
-	67.patch"
+source="https://download.gnome.org/sources/grilo-plugins/${pkgver%.*}/grilo-plugins-$pkgver.tar.xz"
 
 build() {
 	meson \
 		--prefix=/usr \
 		--buildtype=debugoptimized \
 		-Denable-chromaprint=no \
+		-Denable-lua-factory=no \
 		. output
 	ninja -C output
 }
@@ -33,5 +32,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="93d4fcc7d6fd1b43925e286c8856c90d240cf9244d04a8b034df85781b1a6bffcb5c635576e37717325f82a0be567a7087715ff6d680b3c5aca133c6deb43ed2  grilo-plugins-0.3.10.tar.xz
-c87386d21e01268209e920d7aa993018136a2ea798ff091ff7cf455a2bf4f230484c5e15e232089c3507fef40b196d78950a84cc61e86854d0dd88f412586de9  67.patch"
+sha512sums="eefeabf333568d06ce77ba865f2dc96592428ae41c459f51e2ea7f37914c2b3d52778e5548b7d49059f1e4b83c8c07e5a8798272c5ced0259de1900d9e3f6991  grilo-plugins-0.3.11.tar.xz"
