--- a/community/nextcloud/APKBUILD
+++ b/community/nextcloud/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=nextcloud
-pkgver=18.0.0
-pkgrel=1
+pkgver=18.0.1
+pkgrel=0
 pkgdesc="A safe home for all your data"
 url="http://nextcloud.com"
 arch="noarch"
@@ -25,7 +25,7 @@ install="$pkgname.pre-install $pkgname.pre-upgrade $pkgname.post-upgrade
 	$pkgname-initscript.post-install"
 subpackages="$pkgname-doc $pkgname-initscript $pkgname-mysql $pkgname-pgsql $pkgname-sqlite
 	$pkgname-default-apps:_default_apps"
-source="https://download.nextcloud.com/server/releases/$pkgname-$pkgver.zip
+source="https://download.nextcloud.com/server/releases/nextcloud-$pkgver.zip
 	nextcloud15-dont-chmod.patch
 	nextcloud17-app-encryption-info-add-mcrypt.patch
 	dont-update-htaccess.patch
@@ -216,7 +216,7 @@ _package_app() {
 		files_sharing)	app_deps="-federatedfilesharing";;
 		photos)
 				app_deps="-viewer"
-				provides="${pkgname}-gallery=$pkgver-r${pkgrel}"
+				provides="$pkgname-gallery=$pkgver-r$pkgrel"
 		;;
 
 		# XXX: Provides/replaces for backward compatibility with <12.0.0-r2.
@@ -236,7 +236,7 @@ _package_app() {
 	mv "$pkgdir"/$_appsdir/$appname "$subpkgdir"/$_appsdir/
 }
 
-sha512sums="a92a6b5c5e2da688b8df8dead9e09db7d8a3849e7b35f5fca4c51c4dc1db857dd74a1e2c8284eb05949a29f1292b810575b507463b72608975c93ea7d4be4c93  nextcloud-18.0.0.zip
+sha512sums="0f1060bea3e243129fffe0057b821042a45fc2e06537017c7ad9673d3007b797fbf80100adf3ce342ef5ae61227204e0b087ec021d53a90c6d290d9621799c71  nextcloud-18.0.1.zip
 59151300c1153cad7fa2a1a972825c81a71df523b319b22799ce1bd846c1a63c7e37c608a125a98e4e733857cc65db9f329fafef7a5b1365d802c476450fce22  nextcloud15-dont-chmod.patch
 f84888bc2d5049ab490efea859dd68ab68b92fe1722c57d23d474362e363a05a39fac89f192ba0bbadfddb5ac5009737bf66f37983c1094fdd7cca1cb893390f  nextcloud17-app-encryption-info-add-mcrypt.patch
 aef3c92497d738d6968e0f0b0d415b4953500db24ae14af41ef972665cf7eff00cb6c53dc953845fdbb389c3c965a75b8b14b9247513c05cf4130fe1cfc61731  dont-update-htaccess.patch
