community/openexr: upgrade to 2.4.1

--- a/community/openexr/APKBUILD
+++ b/community/openexr/APKBUILD
@@ -1,42 +1,35 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Mark Riedesel <mark+alpine@klowner.com>
 pkgname=openexr
-pkgver=2.4.0
+pkgver=2.4.1
 pkgrel=0
 pkgdesc="A high dynamic-range image file format library"
 url="https://www.openexr.com/"
 arch="all"
-license="BSD"
-depends=""
+license="BSD-3-Clause"
 makedepends="zlib-dev cmake"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-tools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/AcademySoftwareFoundation/openexr/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	mkdir -p build
-	cd build
-	cmake \
+	cmake -B build \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
-		${CMAKE_CROSSOPTS} \
-		..
-	make
+		${CMAKE_CROSSOPTS} .
+	make -C build
 }
 
 package() {
-	make DESTDIR="$pkgdir" \
-		-C "$builddir"/build install
+	make DESTDIR="$pkgdir" -C build install
 }
 
 tools() {
-	cd "$builddir"
 	mkdir -p "$subpkgdir"/usr/
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="b544b1fc9d785cad029f35388894d1e9dae278dfda3c80d5615280386206f2af5c94b72c17e1e1d1514f73a7151b5be0f166a4be5b74abefc2f27fdf0500dfe8  openexr-2.4.0.tar.gz"
+sha512sums="23c0c07fafa42f832e67cbfeeeb12b6b9e373dd0a5b858f463bf5c4d0661c58fad662cef64ef6a3053f0db2f69aee46816568b814872d617284664d1effbbbab  openexr-2.4.1.tar.gz"
