main/openrc: actually integrate the vrf patch

--- a/main/openrc/APKBUILD
+++ b/main/openrc/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=openrc
 pkgver=0.42.1
 _ver=${pkgver/_git*/}
-pkgrel=3
+pkgrel=4
 pkgdesc="OpenRC manages the services, startup and shutdown of a host"
 url="https://github.com/OpenRC/openrc"
 arch="all"
@@ -24,6 +24,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/OpenRC/openrc/archive/$pkgve
 	0008-fix-undeclared-UT_LINESIZE.patch
 	0009-Support-early-loading-of-keymap-if-kdb-is-installed.patch
 	0010-rc-mount-make-timeout-invocation-compatible-with-bus.patch
+	0011-vrf.patch
 
 	openrc.logrotate
 	hostname.initd
