main/freeradius: install logrotate config

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -65,6 +65,7 @@ subpackages="
 	"
 provides="freeradius3=$pkgver-r$pkgrel"
 source="ftp://ftp.freeradius.org/pub/freeradius/$pkgname-server-$pkgver.tar.gz
+	$pkgname.logrotated
 	radiusd.confd
 	radiusd.initd
 	setup-freeradius.in
@@ -162,6 +163,7 @@ package() {
 
 	install -m755 -D "$srcdir"/radiusd.initd "$pkgdir"/etc/init.d/radiusd
 	install -m644 -D "$srcdir"/radiusd.confd "$pkgdir"/etc/conf.d/radiusd
+	install -m644 -D "$srcdir"/$pkgname.logrotated "$pkgdir"/etc/logrotate.d/$pkgname
 	install -m755 -D setup-freeradius "$pkgdir"/usr/sbin/setup-freeradius
 
 	# Install misses to create this
@@ -371,6 +373,7 @@ _mvdb() {
 }
 
 sha512sums="513ed0a5d9e6b9a8d89a9b02c86ff528a9ff14d928f4c1040ca44702465abd711588fe6afa35554cb2c8e8bd7f19dd5be3dbc78445c62c7b00bf5cbc4c621312  freeradius-server-3.0.20.tar.gz
+c3ae1ee6bd7743f883310612ba2c20c6ff7f288fedc308735df05b097ecb2f7fa4d1679b844e262757808978c7bb2d7630b99e4b87ce6d6ba7f84013f9c49f1d  freeradius.logrotated
 bb3df1fa2c9ed95514ae090e0f6619c4e3280f424c4351bc79f5254bf1a327fa7d27e5fe3add5ab8d9e5ba3792c9553bd9a0481fe9c5bc34945ce46627ef2638  radiusd.confd
 a66ab5d3f1c86450e9c50aa8be10a40fb4118467670048773ad8c80b5f3fb958dd3addc6ef245289d93ce2b184ce2c9882a8a2585d4a134d55c2326c9559f558  radiusd.initd
 51f47db8dce93c4c4984093e8256bd0fb4d9c511fbbce610ef72478d8b216fb828fee3f70ae124d44c2a60b35d7792d05602480826845bb5bd4847ef6f745d84  setup-freeradius.in
