main/freeradius: create mods-enabled symlinks in module subpkgs
When user installs a package with the module, we can assume that
(s)he wants to actually use it...

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -211,6 +211,7 @@ eap() {
 
 	amove $_radmodsdir/eap $_radmodsdir/inner-eap
 	amove $_radconfdir/sites-available/check-eap-tls
+	_enable_mod eap
 }
 
 ldap() {
@@ -220,6 +221,7 @@ ldap() {
 
 	amove $_radlibdir/rlm_ldap*
 	amove $_radmodsdir/ldap
+	_enable_mod ldap
 }
 
 krb5() {
@@ -229,6 +231,7 @@ krb5() {
 
 	amove $_radlibdir/rlm_krb5*
 	amove $_radmodsdir/krb5
+	_enable_mod krb5
 }
 
 dhcp() {
@@ -238,6 +241,7 @@ dhcp() {
 	amove $_radlibdir/*_dhcp.so $_radlibdir/libfreeradius-dhcp.so
 	amove $_radmodsdir/dhcp
 	amove $_radconfdir/sites-available/dhcp
+	_enable_mod dhcp
 }
 
 lib() {
@@ -286,6 +290,7 @@ perl() {
 	amove $_radlibdir/rlm_perl*
 	amove $_radconfdir/mods-available/perl
 	amove $_radmodsconfdir/perl
+	_enable_mod perl
 }
 
 checkrad() {
@@ -310,6 +315,7 @@ python3() {
 	amove $_radlibdir/rlm_python*
 	amove $_radmodsdir/python3
 	amove $_radmodsconfdir/python3
+	_enable_mod python3
 }
 
 radclient() {
@@ -343,6 +349,7 @@ pam() {
 
 	amove $_radlibdir/rlm_pam*
 	amove $_radmodsdir/pam
+	_enable_mod pam
 }
 
 rest() {
@@ -351,6 +358,7 @@ rest() {
 
 	amove $_radlibdir/rlm_rest*
 	amove $_radmodsdir/rest
+	_enable_mod rest
 }
 
 redis() {
@@ -359,6 +367,7 @@ redis() {
 
 	amove $_radlibdir/rlm_redis*
 	amove $_radmodsdir/redis*
+	_enable_mod redis
 }
 
 utils() {
@@ -371,6 +380,11 @@ utils() {
 _mvdb() {
 	amove $_radmodsconfdir/sql/*/$1
 	amove $_radlibdir/rlm_sql_$1.so
+}
+
+_enable_mod() {
+	mkdir -p "$subpkgdir"$_radconfdir/mods-enabled
+	ln -s ../mods-available/$1 "$subpkgdir"$_radconfdir/mods-enabled/$1
 }
 
 sha512sums="513ed0a5d9e6b9a8d89a9b02c86ff528a9ff14d928f4c1040ca44702465abd711588fe6afa35554cb2c8e8bd7f19dd5be3dbc78445c62c7b00bf5cbc4c621312  freeradius-server-3.0.20.tar.gz
