main/p11-kit: Ensure trust_paths is set
During the upgrade from `0.23.18.1-r0` to `0.23.20-r0` in commit
7aef1583c323ad5a6c6399fa75fb541b2710d3b8, the build system was changed
from autotools to meson, but the `--with-trust-paths` option didn't get
ported over to the meson equivalent.

This caused commands, like `trust list`, to return no results, which
causes Java issues due to `/etc/ssl/certs/java/cacerts` not being
updated properly (#11185).

This commit adds the meson `trust_paths` build variable so that p11-kit
can find the proper CA certs file.

Signed-off-by: Andrew Gunnerson <andrew.gunnerson@us.ibm.com>

--- a/main/p11-kit/APKBUILD
+++ b/main/p11-kit/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=p11-kit
 pkgver=0.23.20
-pkgrel=0
+pkgrel=1
 pkgdesc="Library for loading and sharing PKCS#11 modules"
 url="https://p11-glue.freedesktop.org/"
 arch="all"
@@ -14,6 +14,7 @@ source="https://github.com/p11-glue/p11-kit/releases/download/$pkgver/p11-kit-$p
 build() {
 	meson \
 		--prefix=/usr \
+		-D trust_paths=/etc/ssl/certs/ca-certificates.crt \
 		. output
 	ninja -C output
 }
