--- a/community/py3-google-auth/APKBUILD
+++ b/community/py3-google-auth/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Keith Maxwell <keith.maxwell@gmail.com>
 pkgname=py3-google-auth
 _pyname=google-auth
-pkgver=1.11.0
+pkgver=1.11.2
 pkgrel=0
 pkgdesc="Google authentication library for Python."
 url="https://google-auth.readthedocs.io/en/latest/"
@@ -24,6 +24,7 @@ checkdepends="
 	py3-pytest-cov
 	py3-pytest-localserver
 	py3-requests
+	py3-responses
 	py3-urllib3
 	py3-cryptography
 	"
@@ -45,5 +46,5 @@ check() {
 	pytest-3 # skips grpc tests
 }
 
-sha512sums="ef51884a1e6724c74787918facb409f693cc0271ac193155273f102e67b31a857453911d541de0d50081812ff3654de04b0d853d33e9ab9e11e88cf7ae2d6a51  google-auth-1.11.0.tar.gz
+sha512sums="39412055b3400792209eee4dec147435e38abbba0a60e5ad2668130b062360fb6ebfac5ecd29f36833c254756d4fda4a0a5ab4ea4c4faa5be7950e5c20781517  google-auth-1.11.2.tar.gz
 34c6eeaf2e83370ec78c5cfd99b54940a3c3027ec361c162c8d5f653426d3fca48705ad76b97660489ffd5c9e0be49a5f9dd5a4df9831777cd6855c9288a9150  10-use-mock-from-standard-library.patch"
