main/fetchmail: upgrade to 6.4.2

--- a/main/fetchmail/APKBUILD
+++ b/main/fetchmail/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=fetchmail
-pkgver=6.4.1
-pkgrel=1
+pkgver=6.4.2
+pkgrel=0
 pkgdesc="A remote-mail retrieval and forwarding utility"
 url="https://www.fetchmail.info/"
 arch="all"
@@ -11,7 +11,11 @@ pkgusers="fetchmail"
 pkggroups="fetchmail"
 makedepends="openssl-dev python3"
 install="fetchmail.pre-install"
-subpackages="$pkgname-doc $pkgname-openrc"
+subpackages="
+	$pkgname-doc
+	$pkgname-openrc
+	fetchmailconf::noarch
+	"
 source="https://downloads.sourceforge.net/fetchmail/fetchmail-$pkgver.tar.xz
 	$pkgname.initd
 	$pkgname.confd
@@ -46,13 +50,19 @@ package() {
 	install -Dm644 "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
 	install -o fetchmail -g fetchmail -d "$pkgdir"/var/lib/fetchmail \
 		"$pkgdir"/var/run/fetchmail
-
-	rm -f "$pkgdir"/usr/bin/fetchmailconf*
-	rm -f "$pkgdir"/usr/share/man/man1/fetchmailconf.1*
-	rm -f "$pkgdir"/usr/lib/python3*/site-packages/fetchmailconf.py*
-	rm -f "$pkgdir"/usr/lib/python3*/site-packages/__pycache__/fetchmailconf*
 }
 
-sha512sums="940b8df52f963f71537962ebe2b2cb88298fd2b54ca79932e5c974abe850f0b59cdc4919d606ee4f210e82d1e0a6f090ea87f1d3bdea18b531d4fbb36f7f9ea0  fetchmail-6.4.1.tar.xz
+fetchmailconf() {
+	depends="python3 py3-future python3-tkinter"
+	pkgdesc="GUI for generating fetchmail configuration files"
+	install=""
+
+	amove usr/bin/fetchmailconf*
+	amove usr/lib/python3*/site-packages/fetchmailconf.py*
+	amove usr/lib/python3*/site-packages/__pycache__/fetchmailconf*
+}
+
+
+sha512sums="8ec62a5df81b9b8c5e5479d35a10aded22aca74f671cded339dc7ae1c78d8a8638dfe4f04be35334184b5b27f3fb857402dc5b587cca8ede3f5b9b268b37edc1  fetchmail-6.4.2.tar.xz
 9520ec6616f4004d091b1c908d3ea38e104ad8f6595959a3cd3ef7544d05e3b75854631289e167ead08479250d04584d3f1855668a7a0ebd16a1ee9106f3b0b3  fetchmail.initd
 6f031ec6bd4a3ae53cd04fbd8470f4d10bd46ca29cabffa634a6801aa2e7707169855fbc045ced3c9a69523e694511a3f076b611678143e49339c8ccac98074e  fetchmail.confd"
