main/dmvpn: upgrade to 1.2.3

--- a/main/dmvpn/APKBUILD
+++ b/main/dmvpn/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 # Maintainer: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 pkgname=dmvpn
-pkgver=1.2.2
+pkgver=1.2.3
 pkgrel=0
 pkgdesc="Dynamic Multipoint VPN"
 url="https://git.alpinelinux.org/cgit/dmvpn-tools/"
@@ -24,6 +24,7 @@ package() {
 	install -D -m 644 dmvpn.awall "$pkgdir"/usr/share/awall/optional/dmvpn.json
 	install -D -m 644 dmvpn-hub.awall "$pkgdir"/usr/share/awall/optional/dmvpn-hub.json
 	install -D dmvpn-pfx-decode "$pkgdir"/usr/libexec/dmvpn-pfx-decode
+	install -D -m 644 dmvpn.charon "$pkgdir"/etc/strongswan.d/dmvpn.conf
 	install -D -m 644 dmvpn.swanctl "$pkgdir"/etc/swanctl/conf.d/dmvpn.conf
 	install -D nhrp-events "$pkgdir"/usr/sbin/nhrp-events
 	install -D nhrp-events.initd "$pkgdir"/etc/init.d/nhrp-events
@@ -58,4 +59,4 @@ dmvpn() {
 	install -D -m 644 dmvpn.lua "$subpkgdir"/usr/share/lua/5.2/dmvpn.lua
 }
 
-sha512sums="bfe9c7d58d7365120c881be4ccd3a1eb270efc059b1a89e6ab33b70d98a3077166d20ce20dd99c70b04776fa3d8386b678546b1d51ecef04756e61cc31bdba78  dmvpn-tools-1.2.2.tar.bz2"
+sha512sums="b318c358def83807ca205b1097f02a7ce393bc8212583ba670fc77924bcfa0d8c6fd0b4c397a2e029b75bdd1dec40b67bf968c7a7f2ece2b95650d88e33e81d1  dmvpn-tools-1.2.3.tar.bz2"
